fix (frontend): added alignment for logout link and guardrails for bottomnavigation

--- a/src/components/organisms/mobileNav.module.scss
+++ b/src/components/organisms/mobileNav.module.scss
@@ -140,8 +140,16 @@
       margin-bottom: 2.5rem;
       color: var.$primary-blue;
 
+      div{
+        &:first-of-type{
+            display: flex;
+            align-items: center;
+        }
+      }
+
       span{
         margin-left: 1.25rem
+
       }
     }
 
